library file set into html format

--- a/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
+++ b/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
@@ -21,23 +21,153 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <br>
 
 <br><span style='font-size:14.0pt'>
-Satzschablonen aus ComplexInstructionTestApplication_LanguageTemplateContainer: 
+Satzschablonen aus LanguageTemplatesCommon: 
 </span>
 <br>
 <br>
+.
+<br>
+Active: ^^
+<br>
+Aktiv: ^^
+<br>
+Ausführungsfilter: ^^
+<br>
+Beep ^^ times.
+<br>
 Behaviour: ^^
 <br>
-Erzeuge Auftrag <> aus '' und '' und Wert ^^.
+Comment: ^^
 <br>
-Erzeuge eine Rechnung <>.
+Das heutige Datum wird als <> festgehalten.
 <br>
-Erzeuge einen Auftrag <>.
+Date of today is stored as <>.
 <br>
-Füge dem Auftrag '' den Wert ^^ zu.
+Ein Screenshot wird als ^^ gespeichert.
+<br>
+Ein Screenshot wird gespeichert, falls der Testfall als pictureProof kategorisiert wurde.
+<br>
+Es existieren ^^.
+<br>
+Execute script ^^ with
+<br>
+Execute script ^^ with input data
+<br>
+Execute script ^^ with input data ^^.
+<br>
+Execute script ^^.
+<br>
+Execute with
+<br>
+Execute with ^^
+<br>
+Execute with all ^^
+<br>
+Filter: ^^
+<br>
+Führe das Skript ^^ aus mit
+<br>
+Führe das Skript ^^ aus mit den Eingabedaten
+<br>
+Führe das Skript ^^ aus.
+<br>
+Führe das Skript ^^ mit den Eingabedaten ^^ aus.
+<br>
+Führe mit
+<br>
+Führe mit ^^
+<br>
+Führe mit allen ^^
+<br>
+Kommentar: ^^
+<br>
+Piepse ^^ mal.
+<br>
+Save screenshot now as ^^.
+<br>
+Save screenshot now if test case is categorized as mitBildnachweis.
+<br>
+Set BDD-Keyword ^^.
+<br>
+Tags: ^^
+<br>
+Test-Parameter: ^^
+<br>
+Test-Phase: ^^
 <br>
 TestData: ^^
 <br>
+Testdaten: ^^
+<br>
+There are ^^.
+<br>
+Verhalten: ^^
+<br>
+Wait ^^ second(s).
+<br>
+Warte ^^ Sekunde(n).
+<br>
 XXID: ^^
+<br>
+^^ mit
+<br>
+^^ mit den Eingabedaten
+<br>
+^^ mit den Eingabedaten ^^.
+<br>
+^^ with 
+<br>
+^^ with input data
+<br>
+^^ with input data ^^.
+<br>
+^^.
+<br>
+^^=^^
+<br>
+das Skript ^^ aus.
+<br>
+the script ^^.
+<br>
+<br>
+<hr>
+<br><span style='font-size:14.0pt'>
+Satzschablonen aus LanguageTemplatesHomePageIKSBasics: 
+</span>
+<br>
+<br>
+Das PDF wird als Dokument <> gespeichert.
+<br>
+Download PDF ^^ als <>.
+<br>
+Enthält '' auf Seite ^^ den Text ^^?
+<br>
+Klicke Hauptmenüpunkt ^^.
+<br>
+Klicke Link ^^.
+<br>
+Klicke die Schaltfläche ^^.
+<br>
+Wird die Seite ^^ angezeigt?
+<br>
+<br>
+<hr>
+<br><span style='font-size:14.0pt'>
+Satzschablonen aus LanguageTemplatesPrint: 
+</span>
+<br>
+<br>
+Die Liste der PDF-Dateien im Download-Verzeichnis ^^ als <> festgehalten.
+<br>
+Die jüngste PDF-Datei im Download-Verzeichnis ^^ wird als <> festgehalten.
+<br>
+Enthält das Dokument '' genau ^^ Seite(n)?
+<br>
+Enthält das Dokument ^^ genau ^^ Seite(n)?
+<br>
+Ist die aktuelle Zahl der PDF-Dateien im Download-Verzeichnis um ^^ höher als in der ^^?
+<br>
+Schließe das PDF-Fenster ^^.
 <br>
 
 <br>
