Use of BDD-Keywords and BehaviourLevelInstructions implemented

--- a/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
+++ b/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
@@ -45,7 +45,7 @@ Date of today is stored as <>.
 <br>
 Ein Screenshot wird als ^^ gespeichert.
 <br>
-Ein Screenshot wird gespeichert, falls der Testfall als pictureProof kategorisiert wurde.
+Erzeuge jetzt einen Screenshot und speichere ihn unter den Namen ^^.
 <br>
 Es existieren ^^.
 <br>
@@ -85,11 +85,15 @@ Piepse ^^ mal.
 <br>
 Save screenshot now as ^^.
 <br>
-Save screenshot now if test case is categorized as mitBildnachweis.
-<br>
 Set BDD-Keyword ^^.
 <br>
+Speichere jetzt einen Screenshot als Bildnachweis, falls der Testfall als pictureProof kategorisiert wurde.
+<br>
 Tags: ^^
+<br>
+Take a screenshoot as picture proof now if test case is categorized as mitBildnachweis.
+<br>
+Take a screenshoot now and save with name ^^.
 <br>
 Test-Parameter: ^^
 <br>
