--- a/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HelloWorldSpringBoot.html
+++ b/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HelloWorldSpringBoot.html
@@ -157,6 +157,13 @@ Select ^^ in selection field ^^.
 <br>
 <hr>
 <br><span style='font-size:14.0pt'>
+Satzschablonen aus LanguageTemplatesPDF: 
+</span>
+<br>
+<br>
+<br>
+<hr>
+<br><span style='font-size:14.0pt'>
 Satzschablonen aus LanguageTemplatesPrint: 
 </span>
 <br>
