--- a/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
+++ b/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
@@ -148,9 +148,14 @@ Klicke Hauptmenüpunkt ^^.
 <br>
 Klicke Link ^^.
 <br>
-Klicke die Schaltfläche ^^.
-<br>
 Wird die Seite ^^ angezeigt?
+<br>
+<br>
+<hr>
+<br><span style='font-size:14.0pt'>
+Satzschablonen aus LanguageTemplatesPDF: 
+</span>
+<br>
 <br>
 <br>
 <hr>
