--- a/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HelloWorldSpringBoot.html
+++ b/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HelloWorldSpringBoot.html
@@ -134,6 +134,29 @@ the script ^^.
 <br>
 <hr>
 <br><span style='font-size:14.0pt'>
+Satzschablonen aus LanguageTemplatesDownload: 
+</span>
+<br>
+<br>
+Close PDF window ^^.
+<br>
+Das heruntergeladene PDF wird als <> festgehalten.
+<br>
+Die Liste der PDF-Dateien im Download-Verzeichnis ^^ als <> festgehalten.
+<br>
+Is the current number of PDF file in the Download directory by ^^ larger than in ^^?
+<br>
+Ist die aktuelle Zahl der PDF-Dateien im Download-Verzeichnis um ^^ höher als in der ^^?
+<br>
+List of PDF files in Download directory ^^ is saved as <>.
+<br>
+Schließe das PDF-Fenster ^^.
+<br>
+The downloaded PDF is saved as <>.
+<br>
+<br>
+<hr>
+<br><span style='font-size:14.0pt'>
 Satzschablonen aus LanguageTemplatesHelloWorldSpringBootBasics: 
 </span>
 <br>
@@ -157,28 +180,33 @@ Select ^^ in selection field ^^.
 <br>
 <hr>
 <br><span style='font-size:14.0pt'>
-Satzschablonen aus LanguageTemplatesPDF: 
+Satzschablonen aus LanguageTemplatesPDFValidation: 
 </span>
 <br>
 <br>
+Does PDF '' contain ^^ page(s)?
 <br>
-<hr>
-<br><span style='font-size:14.0pt'>
-Satzschablonen aus LanguageTemplatesPrint: 
-</span>
+Does PDF '' match the validation rules in ^^?
 <br>
+Does PDF ^^ contain ^^ page(s)?
 <br>
-Die Liste der PDF-Dateien im Download-Verzeichnis ^^ als <> festgehalten.
+Does PDF ^^ contain ^^?
 <br>
-Die jüngste PDF-Datei im Download-Verzeichnis ^^ wird als <> festgehalten.
+Does PDF ^^ on page ^^ contain ^^?
+<br>
+Does PDF ^^ on page ^^ in line ^^ contain ^^?
 <br>
 Enthält das Dokument '' genau ^^ Seite(n)?
 <br>
 Enthält das Dokument ^^ genau ^^ Seite(n)?
 <br>
-Ist die aktuelle Zahl der PDF-Dateien im Download-Verzeichnis um ^^ höher als in der ^^?
+Enthält das PDF ^^ auf Seite ^^ den Text ^^?
 <br>
-Schließe das PDF-Fenster ^^.
+Enthält das PDF ^^ auf Seite ^^ in Zeile ^^ den Text ^^?
+<br>
+Enthält das PDF ^^ den Text ^^?
+<br>
+Entspricht das PDF ^^ den Validationsregeln in ^^?
 <br>
 
 <br>
