--- a/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
+++ b/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
@@ -107,7 +107,11 @@ Wait ^^ second(s).
 <br>
 Warte ^^ Sekunde(n).
 <br>
+XX: ^^
+<br>
 XXID: ^^
+<br>
+XXId: ^^
 <br>
 ^^ = ^^
 <br>
@@ -184,29 +188,29 @@ Satzschablonen aus LanguageTemplatesPDFValidation:
 </span>
 <br>
 <br>
-Does PDF '' contain ^^ page(s)?
+Besteht das Dokument '' aus ^^ Seite(n)?
+<br>
+Does PDF '' consists of ^^ page(s)?
+<br>
+Does PDF '' contain ^^?
 <br>
 Does PDF '' match the validation rules in ^^?
 <br>
+Does PDF '' on page ^^ contain ^^?
+<br>
+Does PDF '' on page ^^ in line ^^ contain ^^?
+<br>
 Does PDF ^^ contain ^^ page(s)?
-<br>
-Does PDF ^^ contain ^^?
-<br>
-Does PDF ^^ on page ^^ contain ^^?
-<br>
-Does PDF ^^ on page ^^ in line ^^ contain ^^?
-<br>
-Enthält das Dokument '' genau ^^ Seite(n)?
 <br>
 Enthält das Dokument ^^ genau ^^ Seite(n)?
 <br>
-Enthält das PDF ^^ auf Seite ^^ den Text ^^?
+Enthält das PDF '' auf Seite ^^ den Text ^^?
 <br>
-Enthält das PDF ^^ auf Seite ^^ in Zeile ^^ den Text ^^?
+Enthält das PDF '' auf Seite ^^ in Zeile ^^ den Text ^^?
 <br>
-Enthält das PDF ^^ den Text ^^?
+Enthält das PDF '' den Text ^^?
 <br>
-Entspricht das PDF ^^ den Validationsregeln in ^^?
+Entspricht das PDF '' den Validationsregeln in ^^?
 <br>
 
 <br>
