PageObject refactored and LanguageTemplateBasics introduced

--- a/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_GoogleSearch.html
+++ b/workspace/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_GoogleSearch.html
@@ -21,29 +21,6 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <br>
 
 <br><span style='font-size:14.0pt'>
-Satzschablonen aus LanguageTemplatesBasics_HelloWorldSpringBoot: 
-</span>
-<br>
-<br>
-Click button ^^.
-<br>
-Click menu item ^^.
-<br>
-Enter ^^ in text field ^^.
-<br>
-Is page ^^ visible?
-<br>
-Is the displayed text ^^ equal to ^^?
-<br>
-Login with ^^, ^^.
-<br>
-Relogin.
-<br>
-Select ^^ in selection field ^^.
-<br>
-<br>
-<hr>
-<br><span style='font-size:14.0pt'>
 Satzschablonen aus LanguageTemplatesCommon: 
 </span>
 <br>
@@ -180,6 +157,19 @@ List of PDF files in Download directory ^^ is saved as <>.
 Schließe das PDF-Fenster ^^.
 <br>
 The downloaded PDF is saved as <>.
+<br>
+<br>
+<hr>
+<br><span style='font-size:14.0pt'>
+Satzschablonen aus LanguageTemplatesGoogleSearchBasics: 
+</span>
+<br>
+<br>
+Enter search text ^^.
+<br>
+Search results contain ^^.
+<br>
+Start search.
 <br>
 <br>
 <hr>
