--- a/sources/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
+++ b/sources/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
@@ -190,6 +190,8 @@ Satzschablonen aus LanguageTemplatesPDFValidation:
 <br>
 Besteht das Dokument '' aus ^^ Seite(n)?
 <br>
+Besteht das Dokument mit dem Namen ^^ aus ^^ Seite(n)?
+<br>
 Does PDF '' consists of ^^ page(s)?
 <br>
 Does PDF '' contain ^^?
@@ -200,9 +202,7 @@ Does PDF '' on page ^^ contain ^^?
 <br>
 Does PDF '' on page ^^ in line ^^ contain ^^?
 <br>
-Does PDF ^^ contain ^^ page(s)?
-<br>
-Enthält das Dokument ^^ genau ^^ Seite(n)?
+Does PDF with name ^^ consists of ^^ page(s)?
 <br>
 Enthält das PDF '' auf Seite ^^ den Text ^^?
 <br>
