Issue #13 implemented: Generattion of system documentation

--- a/sources/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
+++ b/sources/sysnat.natural.language.executable.examples/help/ExistingNLInstructions_HomePageIKS.html
@@ -37,9 +37,13 @@ Klicke Hauptmenüpunkt ^^.
 <br>
 Klicke Link ^^.
 <br>
+Open main menu.
+<br>
 PDF <> saved.
 <br>
 Wird die Seite ^^ angezeigt?
+<br>
+Öffne Hauptmenü.
 <br>
 <br>
 <hr>
